--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
 </head>
 
 <body>
-
+    <div id="wrapper" class="vw-100 vh-100 d-flex justify-content-center align-items-center flex-wrap p-5">
+        <h2>Our Team</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit aliquid laboriosam tempore, cupiditate enim et mollitia autem sed, rerum quos perspiciatis saepe atque aspernatur quo. Aliquid blanditiis est quia molestiae, esse officia nam! Perferendis ratione, 
+            debitis quidem nostrum doloribus aliquam consequuntur. Repellendus deleniti nobis optio laboriosam rem facilis laudantium officiis.</p>
+        <div id="our-team" class="d-flex justify-content-center align-items-center flex-wrap p-5">
+            <div class="card">
+                <div>
+                    Nome miao <br>
+                    ruolo bbbbbbb
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="./js/script.js"></script> 
 </body>
