--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="./js/libreria.js"></script>
     <link rel="stylesheet" href="./css/style.css">
     <title>Our Team</title>
@@ -14,21 +18,41 @@
 </head>
 
 <body>
-    <div id="wrapper" class="vw-100 vh-100 d-flex justify-content-center align-items-center flex-wrap p-5">
-        <h2>Our Team</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit aliquid laboriosam tempore, cupiditate enim et mollitia autem sed, rerum quos perspiciatis saepe atque aspernatur quo. Aliquid blanditiis est quia molestiae, esse officia nam! Perferendis ratione, 
-            debitis quidem nostrum doloribus aliquam consequuntur. Repellendus deleniti nobis optio laboriosam rem facilis laudantium officiis.</p>
-        <div id="our-team" class="d-flex justify-content-center align-items-center flex-wrap p-5">
-            <div class="card">
-                <div>
-                    Nome miao <br>
-                    ruolo bbbbbbb
+        <div id="our-team" class="container-md">
+            <!-- <h2>Our Team</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Et quas culpa quod reiciendis soluta adipisci perferendis libero non quam nulla!
+            </p> -->
+                <div class="row">
+                    <div id="card" class="col-4 text-center card">
+                        <img src="./img/angela-caroll-chief-editor.jpg" alt="angela">
+                        <div>Stefania Sperani</div>
+                        <div>Developer</div>
+                    </div>
+                    <div id="card" class="col-4 text-center card">
+                        <img src="./img/angela-caroll-chief-editor.jpg" alt="angela">
+                        <div>Stefania Sperani</div>
+                        <div>Developer</div>
+                    </div>
+                    <div id="card" class="col-4 text-center card">
+                        <img src="./img/angela-caroll-chief-editor.jpg" alt="angela">
+                        <div>Stefania Sperani</div>
+                        <div>Developer</div>
+                    </div>
+                    <div id="card" class="col-4 text-center card">
+                        <img src="./img/angela-caroll-chief-editor.jpg" alt="angela">
+                        <div>Stefania Sperani</div>
+                        <div>Developer</div>
+                    </div>
+                    <div id="card" class="col-4 text-center card">
+                        <img src="./img/angela-caroll-chief-editor.jpg" alt="angela">
+                        <div>Stefania Sperani</div>
+                        <div>Developer</div>
+                    </div>
                 </div>
-            </div>
         </div>
-    </div>
-
-    <script src="./js/script.js"></script> 
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
