--- a/index.html
+++ b/index.html
@@ -18,39 +18,13 @@
 </head>
 
 <body>
-        <div id="our-team" class="container-md">
-            <!-- <h2>Our Team</h2>
+        <div id="our-team" class="container-md text-center">
+            <h2>Our Team</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Et quas culpa quod reiciendis soluta adipisci perferendis libero non quam nulla!
-            </p> -->
-                <div class="row">
-                    <div id="card" class="col-4 text-center card">
-                        <img src="./img/angela-caroll-chief-editor.jpg" alt="angela">
-                        <div>Stefania Sperani</div>
-                        <div>Developer</div>
-                    </div>
-                    <div id="card" class="col-4 text-center card">
-                        <img src="./img/angela-caroll-chief-editor.jpg" alt="angela">
-                        <div>Stefania Sperani</div>
-                        <div>Developer</div>
-                    </div>
-                    <div id="card" class="col-4 text-center card">
-                        <img src="./img/angela-caroll-chief-editor.jpg" alt="angela">
-                        <div>Stefania Sperani</div>
-                        <div>Developer</div>
-                    </div>
-                    <div id="card" class="col-4 text-center card">
-                        <img src="./img/angela-caroll-chief-editor.jpg" alt="angela">
-                        <div>Stefania Sperani</div>
-                        <div>Developer</div>
-                    </div>
-                    <div id="card" class="col-4 text-center card">
-                        <img src="./img/angela-caroll-chief-editor.jpg" alt="angela">
-                        <div>Stefania Sperani</div>
-                        <div>Developer</div>
-                    </div>
-                </div>
+            </p>
+                
         </div>
     <script src="./js/script.js"></script>
 </body>
