--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Et quas culpa quod reiciendis soluta adipisci perferendis libero non quam nulla!
             </p>
-                
+                <!-- <div class="row g-5">
+                    <div id="card" class="col-4 text-center">
+                        <div class="card">
+                            <img src="./img/angela-caroll-chief-editor.jpg" alt="angela">
+                            <div>Stefania</div>
+                        </div>
+                    </div>
+                </div> -->
         </div>
     <script src="./js/script.js"></script>
 </body>
