--- a/index.html
+++ b/index.html
@@ -11,27 +11,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="./js/libreria.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,900&display=swap" rel="stylesheet"> 
+        <script src="./js/libreria.js"></script>
     <link rel="stylesheet" href="./css/style.css">
     <title>Our Team</title>
 
 </head>
 
 <body>
-        <div id="our-team" class="container-md text-center">
-            <h2>Our Team</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Et quas culpa quod reiciendis soluta adipisci perferendis libero non quam nulla!
-            </p>
-                <!-- <div class="row g-5">
-                    <div id="card" class="col-4 text-center">
-                        <div class="card">
-                            <img src="./img/angela-caroll-chief-editor.jpg" alt="angela">
-                            <div>Stefania</div>
-                        </div>
-                    </div>
-                </div> -->
+        <div id="our-team" class="container-md text-center py-5">
+            <div class="presentation style-css">
+                <h2>Our Team</h2>
+                <p class="py-2">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Et quas culpa quod reiciendis soluta adipisci perferendis libero non quam nulla!
+                </p>
+            </div>
+
+            <div id=row class="row g-5">
+                <!-- js -->
+            </div>
         </div>
     <script src="./js/script.js"></script>
 </body>
